--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "firebase": "^6.4.0",
+    "firebase-admin": "^8.3.0",
     "highcharts": "^7.1.2",
+    "http2": "^3.3.7",
     "materialize-css": "^1.0.0-rc.2",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
