--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-datepicker": "^2.8.0",
     "react-dom": "^16.9.0",
     "react-firebase": "^2.2.8",
+    "react-firebase-file-uploader": "^2.4.2",
     "react-jsx-highcharts": "^3.6.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
