--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-firebase-file-uploader": "^2.4.2",
     "react-jsx-highcharts": "^3.6.1",
     "react-materialize": "^3.3.4",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
-    "react-time-picker": "^3.7.1"
+    "react-time-picker": "^3.7.1",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
